Do Not Edit!  This is a generated file.
	You should edit the NEWS file instead.

2007-09-07 08:26  rkowen

	* NEWS: Note that rpms can now be generated.

2007-09-07 08:24  rkowen

	* .cvsignore, etc/tally: Need to override the umask.

2007-09-07 08:12  rkowen

	* etc/: README.examples, logscript, tally: The example support
	files need to have permissive access.

2007-09-06 16:17  rkowen

	* Makefile.am, configure.ac, pam-script.spec.in: Crafted a working
	rpm spec file.

2007-09-05 14:36  rkowen

	* NEWS: Added the debian packaging notice.

2007-09-05 14:35  rkowen

	* Makefile.am, debian/pam-script-examples.files,
	debian/pam-script-examples.install,
	debian/pam-script-module.install, debian/rules: Got the debian
	packaging the way I want it.

2007-09-05 14:34  rkowen

	* pam_script.c: Need stdlib.h for calloc() as well as setenv() and
	putenv().

2007-09-05 14:33  rkowen

	* etc/README.examples: Fixed reference to tally.

2007-09-04 15:14  rkowen

	* Makefile.am, debian/README.Debian, debian/control,
	debian/pam-script-examples.dirs,
	debian/pam-script-examples.install, debian/pam-script-module.dirs,
	debian/pam-script-module.install, debian/rules, etc/README,
	etc/README.examples: Changes for creating two debian packages.

2007-09-04 15:14  rkowen

	* pam_script.c: Changes to remove any compiler warnings.

2007-08-31 10:43  rkowen

	* NEWS: Updated with the tally example.

2007-08-31 10:40  rkowen

	* .cvsignore, debian/.cvsignore: Ignore more generated files.

2007-08-31 10:40  rkowen

	* etc/tally: Need to give a specific #! line and not a generic
	search for perl concoction.

2007-08-31 10:38  rkowen

	* pam_script.c: pam_script_exec() should only return PAM_SUCCESS or
	the return value given ...  not what the script returns else this
	confuses PAM which will give incorrect error messages.

2007-08-31 09:35  rkowen

	* Makefile.am: Added a target for just copying all of the example
	scripts.

2007-08-31 09:34  rkowen
